Seal it off